--- a/select.css
+++ b/select.css
@@ -20,3 +20,15 @@
   cursor: pointer;
   user-select: none;
 }
+
+.custom-select-options {
+  display: none;
+  position: absolute;
+  padding: 0;
+  margin: 0;
+  border: 2px solid black;
+  width: 100%;
+  border-top: none;
+  max-height: 200px;
+  overflow-y: auto; 
+}
