--- a/select.css
+++ b/select.css
@@ -1,3 +1,4 @@
+  
 .custom-select-container,
 .custom-select-value, 
 .custom-select-options, 
@@ -21,6 +22,20 @@
   user-select: none;
 }
 
+.custom-select-container:focus > .custom-select-value {
+  border-width: 2px;
+  outline: none;
+}
+
+.custom-select-value::after {
+  content: '';
+  display: inline-block;
+  border: 4px solid transparent;
+  border-top-color: black;
+  margin-left: 12px;
+  margin-top: 4px;
+}
+
 .custom-select-options {
   display: none;
   position: absolute;
@@ -31,4 +46,21 @@
   border-top: none;
   max-height: 200px;
   overflow-y: auto; 
+}
+
+.custom-select-options.show {
+  display: block;
+}
+
+.custom-select-option {
+  padding: .25rem .5rem;
+  cursor: pointer;
+}
+
+.custom-select-option:hover {
+  background-color: hsl(200, 100%, 70%);
+}
+
+.custom-select-option.selected {
+  background-color: hsl(200, 100%, 50%);
 }
